Style containment applies to display:content elements.

The CSS Containment spec explicitly states that containment has no
effect on elements with display:contents element for paint, layout and
others. Not stated for contain:style.

Check for style containment for counters even when LayoutObject is null.

Note that due to the bug reported in 766650, the added test passes even
without this code change.

Bug: 766650
Change-Id: I64082f52255d5d810ba803148a418edff5da66c8
Reviewed-on: https://chromium-review.googlesource.com/771830
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517140}
Former-commit-id: 6ddbf96264d611b883d034ed674e61031ab4151a